update test and documentation

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,3 +29,7 @@ You can install the development version of washr from [GitHub](https://github.co
 # install.packages("devtools")
 devtools::install_github("openwashdata-dev/washr")
 ```
+
+## Workflow
+
+To learn more, please refer to the detailed vignette: .
