--- a/vignettes/washr-get-started.Rmd
+++ b/vignettes/washr-get-started.Rmd
@@ -34,7 +34,7 @@ This vignette demonstrates the `washr` data package development workflow with a 
 
     Make up the results for the total solids (TS) analyses (e.g. 12.48 g/L).
 
-You can download the raw data `sample.xlsx` here: <https://github.com/openwashdata-dev/washr/blob/main/inst/extdata/sample.xlsx>
+You can download the raw data `sample.xlsx` here: <https://github.com/openwashdata-dev/washr/blob/cran/inst/extdata/sample.xlsx>
 
 ```{r setup}
 library(washr)
@@ -172,7 +172,7 @@ Go to `data-raw/dictionary.csv`, open the CSV file.
 -   Fill in the empty column `description` for each variable of the dictionary.
 -   DO NOT add new lines or modify other columns of this file.
 
-Once the dictionary is complete, you document the dataset in R documentation system with the so-called ["roxygen comments"](https://cran.r-project.org/web/packages/roxygen2/vignettes/rd.html). You convert the data dictionary CSV file into roxygen comments by executing:
+Once the dictionary is complete, you document the dataset in R documentation system with the so-called ["roxygen comments"](https://CRAN.R-project.org/package=roxygen2). You convert the data dictionary CSV file into roxygen comments by executing:
 
 ```{r}
 setup_roxygen()
