--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,9 @@ knitr::opts_chunk$set(
 # washr
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/openwashdata-dev/washr/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/openwashdata-dev/washr/actions/workflows/R-CMD-check.yaml)
+
+[![R-CMD-check](https://github.com/openwashdata-dev/washr/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/openwashdata-dev/washr/actions/workflows/R-CMD-check.yaml) [![Hippocratic License HL3-CORE](https://img.shields.io/static/v1?label=Hippocratic%20License&message=HL3-CORE&labelColor=5e2751&color=bc8c3d)](https://firstdonoharm.dev/version/3/0/core.html)
+
 <!-- badges: end -->
 
 The goal of `washr` is to provide tools to make the [openwashdata data package](https://openwashdata.org/pages/gallery/data/) workflow consistent and efficient.
